# fem_lattice_simulator

./: .gitignore  README.md  lattice.json  pyproject.toml  run_pipeline.sh
scripts/: apply_indent_boundary_conditions.py  generate_lattice_from_yaml.py  json_to_yaml.py
src/: assembly.py  beam.py  io.py  main.py  model.py  solver.py
tests/: test_physics.py  test_ramped_exports.py  test_vtu_cell_stress.py
