[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fem-lattice-simulator"
version = "0.1.0"
description = "A Python/JAX-based 3D beam finite element simulator for lattice structures"
readme = "README.md"
authors = [
  { name = "Ivan Grega" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "jax>=0.6.2",
    "jax[cpu]",
    "jaxlib>=0.6.2",
    "numpy>=2.0.0",
    "scipy",
    "meshio",
    "matplotlib",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/igrega/fem_lattice_simulator"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
